--- a/app/src/main/res/layout/activity_favor.xml
+++ b/app/src/main/res/layout/activity_favor.xml
@@ -17,8 +17,7 @@
         android:layout_columnWeight="1"
         android:background="@android:color/transparent"
         android:contentDescription="@string/description_btn"
-        android:scaleType="centerCrop"
-        android:src="@drawable/main_bt_01" />
+        android:scaleType="centerCrop" />
 
     <ImageButton
         android:id="@+id/btnFavorFunction2"
@@ -28,8 +27,7 @@
         android:layout_rowWeight="1"
         android:scaleType="centerCrop"
         android:contentDescription="@string/description_btn"
-        android:background="@android:color/transparent"
-        android:src="@drawable/main_bt_02" />
+        android:background="@android:color/transparent" />
 
     <ImageButton
         android:id="@+id/btnFavorFunction3"
@@ -39,8 +37,7 @@
         android:layout_rowWeight="1"
         android:scaleType="centerCrop"
         android:contentDescription="@string/description_btn"
-        android:background="@android:color/transparent"
-        android:src="@drawable/main_bt_03" />
+        android:background="@android:color/transparent" />
 
     <ImageButton
         android:id="@+id/btnFavorFunction4"
@@ -50,8 +47,7 @@
         android:layout_rowWeight="1"
         android:scaleType="centerCrop"
         android:contentDescription="@string/description_btn"
-        android:background="@android:color/transparent"
-        android:src="@drawable/main_bt_04"/>
+        android:background="@android:color/transparent" />
 
     <ImageButton
         android:id="@+id/btnFavorFunction5"
@@ -61,8 +57,7 @@
         android:layout_rowWeight="1"
         android:scaleType="centerCrop"
         android:contentDescription="@string/description_btn"
-        android:background="@android:color/transparent"
-        android:src="@drawable/main_bt_05" />
+        android:background="@android:color/transparent" />
 
     <ImageButton
         android:id="@+id/btnFavorFunction6"
@@ -72,8 +67,7 @@
         android:layout_rowWeight="1"
         android:scaleType="centerCrop"
         android:contentDescription="@string/description_btn"
-        android:background="@android:color/transparent"
-        android:src="@drawable/main_bt_06"/>
+        android:background="@android:color/transparent" />
 
     <ImageButton
         android:id="@+id/btnFavorFunction7"
@@ -83,8 +77,7 @@
         android:layout_rowWeight="1"
         android:scaleType="centerCrop"
         android:contentDescription="@string/description_btn"
-        android:background="@android:color/transparent"
-        android:src="@drawable/main_bt_07"/>
+        android:background="@android:color/transparent" />
 
     <ImageButton
         android:id="@+id/btnFavorFunction8"
@@ -94,7 +87,6 @@
         android:layout_rowWeight="1"
         android:scaleType="centerCrop"
         android:contentDescription="@string/description_btn"
-        android:background="@android:color/transparent"
-        android:src="@drawable/main_bt_08" />
+        android:background="@android:color/transparent" />
 
 </GridLayout>
