0918 - 이미지추가 및 에피소드 준비

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -8,9 +8,9 @@
     </string-array>
 
     <string-array name="Test_image">
-        <item>bubble_g_down</item>
         <item>bubble_g_up</item>
-        <item>bubble_r_circle</item>
+        <item>bubble_g_down</item>
+        <item>bubble_b_up</item>
     </string-array>
 
     <string-array name="Test_Size">
@@ -20,51 +20,46 @@
     </string-array>
 
     <string-array name="Naver_search">
-        <item>100,500</item>
-        <item>100,250</item>
-        <item>950,100</item>
+        <item>100,600</item>
+        <item>100,700</item>
     </string-array>
 
     <string-array name="Naver_search_image">
-        <item>bubble_g_down</item>
-        <item>bubble_g_up</item>
-        <item>bubble_r_circle</item>
+        <item>naver_help_search</item>
+        <item>bubble_r_sq</item>
     </string-array>
 
     <string-array name="Naver_search_imageSize">
         <item>900,150</item>
         <item>900,150</item>
-        <item>120,120</item>
     </string-array>
 
-    <string-array name="Naver1_search">
-        <item>300,500</item>
-        <item>300,1150</item>
+    <string-array name="Naver_weather">
+        <item>100,200</item>
+        <item>100,2000</item>
     </string-array>
 
-    <string-array name="Naver1_search_image">
-        <item>pin</item>
-        <item>testbox_one</item>
+    <string-array name="Naver_weather_image">
+        <item>naver_help_weather1</item>
+        <item>naver_help_weather2</item>
+
     </string-array>
 
-    <string-array name="Naver1_search_imageSize">
-        <item>300,300</item>
-        <item>1000,300</item>
+    <string-array name="Naver_weather_imageSize">
+        <item>900,150</item>
+        <item>900,150</item>
     </string-array>
 
-    <string-array name="Naver2_search">
-        <item>300,500</item>
-        <item>300,1150</item>
+    <string-array name="Naver_stock">
+        <item>100,300</item>
     </string-array>
 
-    <string-array name="Naver2_search_image">
-        <item>pin</item>
-        <item>testbox_one</item>
+    <string-array name="Naver_stock_image">
+        <item>naver_help_stock</item>
     </string-array>
 
-    <string-array name="Naver2_search_imageSize">
-        <item>300,300</item>
-        <item>1000,300</item>
+    <string-array name="Naver_stock_imageSize">
+        <item>900,150</item>
     </string-array>
 
     <string-array name="Naver3_search">
@@ -110,6 +105,24 @@
     <string-array name="Naver5_search_imageSize">
         <item>300,300</item>
         <item>1000,300</item>
+    </string-array>
+
+    <string-array name="kakao_message">
+        <item>100,200</item>
+        <item>100,1600</item>
+        <item>100,1850</item>
+    </string-array>
+
+    <string-array name="kakao_message_image">
+        <item>kakao_help_message1</item>
+        <item>kakao_help_message2</item>
+        <item>kakao_help_message3</item>
+    </string-array>
+
+    <string-array name="kakao_message_imageSize">
+        <item>900,150</item>
+        <item>500,500</item>
+        <item>1000,1000</item>
     </string-array>
 
 </resources>
