--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -8,9 +8,9 @@
     </string-array>
 
     <string-array name="Test_image">
-        <item>bubble_g_down</item>
         <item>bubble_g_up</item>
-        <item>bubble_r_circle</item>
+        <item>bubble_g_down</item>
+        <item>bubble_b_up</item>
     </string-array>
 
     <string-array name="Test_Size">
@@ -21,43 +21,46 @@
 
     <string-array name="Naver_search">
         <item>100,600</item>
-        <item>200,760</item>
+        <item>100,200</item>
+        <item>700,100</item>
     </string-array>
 
     <string-array name="Naver_search_image">
-        <item>naver_help1</item>
-        <item>bubble_r_sq</item>
+        <item>naver_help_search</item>
+        <item>naver_help_search2</item>
+        <item>bubble_r_circle</item>
     </string-array>
 
     <string-array name="Naver_search_imageSize">
         <item>900,150</item>
-        <item>800,150</item>
-    </string-array>
-
-    <string-array name="Naver_stock">
-        <item>50,200</item>
-    </string-array>
-
-    <string-array name="Naver_stock_image">
-        <item>naver_help2</item>
-    </string-array>
-
-    <string-array name="Naver_stock_imageSize">
         <item>900,150</item>
+        <item>100,100</item>
     </string-array>
 
     <string-array name="Naver_weather">
         <item>100,200</item>
-        <item>100,2200</item>
+        <item>100,2000</item>
     </string-array>
 
     <string-array name="Naver_weather_image">
-        <item>naver_help3</item>
-        <item>naver_help4</item>
+        <item>naver_help_weather1</item>
+        <item>naver_help_weather2</item>
     </string-array>
 
     <string-array name="Naver_weather_imageSize">
         <item>900,150</item>
+        <item>900,150</item>
+    </string-array>
+
+    <string-array name="Naver_stock">
+        <item>100,300</item>
+    </string-array>
+
+    <string-array name="Naver_stock_image">
+        <item>naver_help_stock1</item>
+    </string-array>
+
+    <string-array name="Naver_stock_imageSize">
         <item>900,150</item>
     </string-array>
 
@@ -108,21 +111,20 @@
 
     <string-array name="kakao_message">
         <item>100,200</item>
-        <item>120,1800</item>
-        <item>100,1800</item>
+        <item>100,1600</item>
+        <item>100,1850</item>
     </string-array>
 
     <string-array name="kakao_message_image">
-        <item>kakao_help1</item>
-        <item>kakao_help2</item>
-        <item>kakao_help3</item>
+        <item>kakao_help_message1</item>
+        <item>kakao_help_message2</item>
+        <item>kakao_help_message3</item>
     </string-array>
 
     <string-array name="kakao_message_imageSize">
         <item>900,150</item>
-        <item>200,200</item>
-        <item>900,900</item>
+        <item>500,500</item>
+        <item>1000,1000</item>
     </string-array>
-
 
 </resources>
