--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -64,79 +64,229 @@
         <item>950,250</item>
     </string-array>
 
-    <string-array name="Naver3_search">
-        <item>300,500</item>
-        <item>300,1150</item>
+    <string-array name="Naver_mail">
+        <item>80,300</item>
+        <item>700,1550</item>
     </string-array>
 
-    <string-array name="Naver3_search_image">
-        <item>pin</item>
-        <item>testbox_one</item>
+    <string-array name="Naver_mail_image">
+        <item>naver_help_mail1</item>
+        <item>naver_help_mail2</item>
     </string-array>
 
-    <string-array name="Naver3_search_imageSize">
+    <string-array name="Naver_mail_imageSize">
+        <item>950,250</item>
         <item>300,300</item>
-        <item>1000,300</item>
     </string-array>
 
-    <string-array name="Naver4_search">
-        <item>300,500</item>
-        <item>300,1150</item>
+    <string-array name="Naver_news">
+        <item>80,300</item>
+        <item>500,300</item>
     </string-array>
 
-    <string-array name="Naver4_search_image">
-        <item>pin</item>
-        <item>testbox_one</item>
+    <string-array name="Naver_news_image">
+        <item>naver_help_news1</item>
+        <item>naver_help_news2</item>
     </string-array>
 
-    <string-array name="Naver4_search_imageSize">
-        <item>300,300</item>
-        <item>1000,300</item>
+    <string-array name="Naver_news_imageSize">
+        <item>950,250</item>
+        <item>950,250</item>
     </string-array>
 
+    <string-array name="Naver_shopping">
+        <item>80,300</item>
+        <item>120,300</item>
+    </string-array>
+
+    <string-array name="Naver_shopping_image">
+        <item>naver_help_shopping1</item>
+        <item>naver_help_shopping2</item>
+    </string-array>
+
+    <string-array name="Naver_shopping_imageSize">
+        <item>950,250</item>
+        <item>950,250</item>
+    </string-array>
+
+    <string-array name="Naver_map">
+        <item>80,300</item>
+    </string-array>
+
+    <string-array name="Naver_map_image">
+        <item>naver_help_map</item>
+    </string-array>
+
+    <string-array name="Naver_map_imageSize">
+        <item>850,250</item>
+    </string-array>
 
     <string-array name="kakao_message">
+        <item>50,300</item>
+        <item>50,1900</item>
         <item>50,2100</item>
-        <item>20,250</item>
-        <item>100,1680</item>
         <item>120,1500</item>
     </string-array>
 
     <string-array name="kakao_message_image">
-        <item>bubble_r_circle</item>
         <item>kakao_help_message1</item>
         <item>kakao_help_message4</item>
+        <item>bubble_r_circle</item>
         <item>kakao_help_message3</item>
     </string-array>
 
     <string-array name="kakao_message_imageSize">
-        <item>150,150</item>
-        <item>1050,275</item>
         <item>950,250</item>
+        <item>750,300</item>
+        <item>150,150</item>
         <item>872,500</item>
     </string-array>
 
+    <string-array name="kakao_facetalk">
+        <item>50,300</item>
+        <item>700,1900</item>
+        <item>700,2100</item>
+    </string-array>
+
+    <string-array name="kakao_facetalk_image">
+        <item>kakao_help_facetalk1</item>
+        <item>kakao_help_message2</item>
+        <item>bubble_r_circle</item>
+    </string-array>
+
+    <string-array name="kakao_facetalk_imageSize">
+        <item>950,250</item>
+        <item>750,300</item>
+        <item>150,150</item>
+    </string-array>
+
+    <string-array name="kakao_voicetalk">
+        <item>50,300</item>
+        <item>700,1900</item>
+        <item>700,2100</item>
+    </string-array>
+
+    <string-array name="kakao_voicetalk_image">
+        <item>kakao_help_voicetalk1</item>
+        <item>kakao_help_message2</item>
+        <item>bubble_r_circle</item>
+    </string-array>
+
+    <string-array name="kakao_voicetalk_imageSize">
+        <item>950,250</item>
+        <item>750,300</item>
+        <item>150,150</item>
+    </string-array>
+
+    <string-array name="kakao_gift">
+        <item>700,2300</item>
+        <item>20,1100</item>
+        <item>50,300</item>
+        <item>800,200</item>
+    </string-array>
+
+    <string-array name="kakao_gift_image">
+        <item>kakao_help_gift1</item>
+        <item>bubble_r_circle</item>
+        <item>kakao_help_gift2</item>
+        <item>kakao_help_gift3</item>
+    </string-array>
+
+    <string-array name="kakao_gift_imageSize">
+        <item>950,250</item>
+        <item>150,150</item>
+        <item>950,250</item>
+        <item>750,300</item>
+    </string-array>
+
     <string-array name="kakao_profile">
-        <item>50,2100</item>
-        <item>100,200</item>
+        <item>30,100</item>
+        <item>50,200</item>
         <item>70,1700</item>
         <item>70,1200</item>
         <item>70,350</item>
     </string-array>
 
     <string-array name="kakao_profile_image">
-        <item>bubble_r_circle</item>
         <item>kakao_help_message2</item>
+        <item>bubble_r_circle</item>
         <item>kakao_help_profile1</item>
         <item>kakao_help_profile2</item>
         <item>kakao_help_profile3</item>
     </string-array>
 
     <string-array name="kakao_profile_imageSize">
-        <item>150,150</item>
         <item>750,200</item>
+        <item>150,150</item>
         <item>950,250</item>
         <item>950,250</item>
         <item>950,250</item>
     </string-array>
+
+    <string-array name="kakao_shopping">
+        <item>700,2300</item>
+        <item>100,1500</item>
+    </string-array>
+
+    <string-array name="kakao_shopping_image">
+        <item>kakao_help_shopping1</item>
+        <item>kakao_help_shopping2</item>
+    </string-array>
+
+    <string-array name="kakao_shopping_imageSize">
+        <item>950,250</item>
+        <item>950,250</item>
+    </string-array>
+
+    <string-array name="kakao_friend">
+        <item>700,150</item>
+        <item>300,400</item>
+        <item>200,600</item>
+    </string-array>
+
+    <string-array name="kakao_friend_image">
+        <item>kakao_help_friend1</item>
+        <item>kakao_help_friend2</item>
+        <item>kakao_help_friend3</item>
+    </string-array>
+
+    <string-array name="kakao_friend_imageSize">
+        <item>750,300</item>
+        <item>750,300</item>
+        <item>950,250</item>
+    </string-array>
+
+    <string-array name="baemin_help">
+        <item>100,1500</item>
+    </string-array>
+
+    <string-array name="baemin_help_image">
+        <item>baemin_help</item>
+    </string-array>
+
+    <string-array name="baemin_help_imageSize">
+        <item>872,500</item>
+    </string-array>
+
+    <string-array name="youtube_help">
+        <item>100,120</item>
+        <item>120,200</item>
+        <item>900,2000</item>
+    </string-array>
+
+    <string-array name="youtube_help_image">
+        <item>youtube_help1</item>
+        <item>youtube_help2</item>
+        <item>youtube_help4</item>
+    </string-array>
+
+    <string-array name="youtube_help_imageSize">
+        <item>950,250</item>
+        <item>950,250</item>
+        <item>750,350</item>
+    </string-array>
+
+
+
+
 </resources>
