1112 - 스플래시 수정

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,7 +9,7 @@
         android:id="@+id/splash_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/intro_full" />
+        android:src="@drawable/intro_full2" />
     <!-- ADD SPLASH ART -->
 
 
